First step to validator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.servlet.session.timeout=30m
+firebase.service-account-filename=classpath:firebasekey.json
+firebase.realtime-database-url=https://taller-firebase-2019.firebaseio.com/
