--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>firebase-admin</artifactId>
             <version>${firebase-admin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>1.2.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
