--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5433/tupunto
+spring.datasource.username=postgres
+spring.datasource.password=$vS}?E>jHTcu75Nr
+spring.jpa.generate-ddl=true
+
 server.servlet.session.timeout=30m
